--- a/index.html
+++ b/index.html
@@ -3,13 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <title>BlackFalcon SOC</title>
+<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
 <style>
 body{
 margin:0;
 background:black;
 color:#00f5d4;
-font-family:Orbitron, sans-serif;
+font-family:'Orbitron',sans-serif;
 overflow:hidden;
 transition:0.4s;
 }
@@ -27,7 +28,7 @@ margin-top:100px;
 }
 
 h1{
-font-size:40px;
+font-size:42px;
 text-shadow:0 0 25px #00f5d4;
 }
 
@@ -48,7 +49,7 @@ margin:10px;
 
 textarea{
 width:80%;
-height:120px;
+height:130px;
 background:rgba(0,0,0,0.6);
 border:1px solid #00f5d4;
 border-radius:20px;
@@ -93,13 +94,9 @@ color:#ff8080;
 background:rgba(255,0,0,0.1);
 }
 
-.safe{
-color:#00ff88;
-}
+.safe{ color:#00ff88; }
+.danger{ color:#ff0033; }
 
-.danger{
-color:#ff0033;
-}
 </style>
 </head>
 <body>
@@ -156,12 +153,30 @@ document.getElementById("msg").addEventListener("click",()=>{
 speak(currentLang==="ar"?"مربع إدخال الرسالة":"Message input field");
 });
 
-/* ================= تحليل ================= */
+/* ================= قائمة كلمات مشبوهة كبيرة ================= */
 
 const suspiciousWords=[
-"تحقق","حسابك","otp","رمز","كلمة المرور",
-"verify","password","bank","credit card","click here"
+
+// عربي
+"تحقق من حسابك","تم تجميد حسابك","أدخل بياناتك","الرقم السري",
+"رمز التحقق","كلمة المرور","حسابك البنكي","بطاقتك الائتمانية",
+"تحديث بياناتك","مبروك لقد ربحت","اضغط هنا","عرض محدود",
+"تحويل بنكي","استثمار فوري","ضاعف أموالك","اربح الآن",
+"مساعدة مالية","قرض سريع","بيانات البطاقة","رقم البطاقة",
+"CVV","IBAN","OTP","حوالة عاجلة",
+
+// English
+"verify your account","account suspended","reset your password",
+"claim your prize","free gift card","urgent action required",
+"limited time offer","click here","bank transfer",
+"bitcoin investment","double your money","credit card number",
+"security alert","confirm your identity","paypal alert",
+"apple id locked","update payment information",
+"crypto investment","win cash now","lottery winner",
+"wire transfer","social security number","ssn"
 ];
+
+/* ================= تحليل ================= */
 
 let timer;
 
@@ -179,7 +194,7 @@ suspiciousWords.forEach(w=>{
 if(text.includes(w.toLowerCase())) matches++;
 });
 
-let risk=Math.min(matches*25,100);
+let risk=Math.min(matches*20,100);
 
 document.getElementById("score").innerText=risk;
 document.getElementById("bar").style.width=risk+"%";
